# anime-list-api

./: .gitignore  README.md  ai_project_context_builder.py  fastapi_project_tree.py  main.py  pyproject.toml  requirements.txt
app/core/: config.py
app/db/: database.py
app/repositories/: anime_repository.py
app/routers/: animes.py
app/schemas/: anime.py
tests/: test_animes.py
