[project]
name = "anime-list-api"
version = "1.0.0"
description = "Modular REST API optimized for managing anime catalogs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
    "uvicorn>=0.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
